Fix: prevent config screen keypress NPE